graphql-parser/tests/snapshots/tests__fail_querry__parse_schema__unix.snap
---
source: graphql-parser/tests/tests.rs
expression: result
---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `querry[Name]`\nExpected `schema`, `extend`, `scalar`, `type`, `interface`, `union`, `enum`, `input`, `query`, `mutation`, `subscription`, `fragment` or `directive`\n",
    ),
)
