graphql-parser/tests/snapshots/tests__fail_querry__parse_schema__win.snap
---
source: graphql-parser/tests/tests.rs
expression: "format!(\"{}\\n---\\n{:#?}\", & input, & result)"
---
querry MyQuery {
  field1
}

---
Err(
    ParseError(
        "Parse error at 1:1\nUnexpected `querry[Name]`\nExpected `schema`, `extend`, `scalar`, `type`, `interface`, `union`, `enum`, `input`, `query`, `mutation`, `subscription`, `fragment` or `directive`\n",
    ),
)
